# python-react-template

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml
backend/filesystem/entrypoints/: web.sh  worker.sh
backend/lwca/: app.py  entry.py  logging.py  settings.py
backend/lwca/config/: routes.py  swagger.py
backend/lwca/docs/auth/: login.yml  register.yml
backend/lwca/docs/projects/: create_project.yml  delete_project.yml  get_project.yml  get_projects.yml  update_project.yml
backend/lwca/docs/user_notifications/: get_user_notifications.yml
backend/lwca/docs/users/: delete_user.yml  get_user.yml
backend/lwca/docs/users_settings/: get_user_settings.yml  update_user_settings.yml
backend/lwca/handlers/: auth_handler.py  constants.py  projects_handler.py  user_notifications_handler.py  user_settings_handler.py  users_handler.py
backend/lwca/models/: analysis.py  base.py  project.py  user.py  user_notification.py  user_settings.py
backend/lwca/resources/auth/: login_resource.py  register_resource.py
backend/lwca/routes/: __init__.py  auth.py  login.yml  projects.py  register.yml  user_notifications.py  users.py  users_settings.py
backend/lwca/schemas/: project.py  user.py  user_notification.py  user_settings.py
backend/lwca/services/: file_storage.py  llm_service.py
backend/lwca/services/repository_analyzer/: readme_analyzer.py  repository_structure_analyzer.py
backend/lwca/services/repository_analyzer/ingest/: constants.py  ingestor.py
backend/lwca/services/repository_parser/: repo_parser.py
backend/lwca/tasks/: __init__.py  analysis_task.py
backend/lwca/tests/: auth_handler_test.py  projects_handler_test.py
backend/migrations/: alembic.ini
backend/migrations/versions/: 0f4f89684113_update_project_table_add_user_id.py  473eafbdf313_update_user_notifications.py  4abdf7529663_create_user_table.py  787a3b7301a7_add_user_notifications.py  d836bbe774c7_add_user_settings.py  d8cfebab397c_create_project_table.py
backend/tests/: test_api.sh  test_auth_api.sh
frontend/: Dockerfile  Makefile  index.html  package.json  (+1 more)
(+82 files in other folders)
