[tool.poetry]
name = "lwca"
version = "1.0.0"
description = ""
authors = ["Nicolas Kerdelhué"]

[tool.poetry.dependencies]
python = "3.9.19"
flask = "2.2.5"
uwsgi = "2.0.26"
flask-sqlalchemy = "3.1.1"
celery = "5.4.0"
flask-migrate = "4.0.7"
sqlalchemy-utils = "0.41.2"
redis = "5.0.8"
flask-shell-ipython = "0.5.1"
psycopg2 = "2.9.9"
flask-cors = "^5.0.0"
flasgger = "^0.9.7.1"
Werkzeug = "3.0.4"
sqlalchemy = "^2.0.31"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.6.0"
flask-socketio = "^5.3.6"

[tool.poetry.dev-dependencies]
pytest = "8.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
