[tool.poetry]
name = "lwca"
version = "1.0.0"
description = ""
authors = ["Nicolas Kerdelhué"]

[tool.poetry.dependencies]
python = ">=3.12.0,<4"
flask = "3.1.0"
uwsgi = "2.0.28"
flask-sqlalchemy = "3.1.1"
celery = "5.4.0"
flask-migrate = "4.1.0"
sqlalchemy-utils = "0.41.2"
redis = "5.2.1"
flask-shell-ipython = "0.5.3"
psycopg2 = "2.9.10"
flask-cors = "^5.0.1"
flasgger = "^0.9.7.1"
Werkzeug = "3.1.3"
sqlalchemy = "^2.0.38"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.1"
flask-socketio = "^5.5.1"
flask-marshmallow = "^1.3.0"
marshmallow-sqlalchemy = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
